--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - ubuntu-latest-arm
+          - ubuntu-24.04-arm
           - macos-latest
           - windows-latest
         compiler:
@@ -82,7 +82,7 @@ jobs:
             packaging_maintainer_mode: On
             enable_ipo: Off
 
-          - os: ubuntu-latest-arm
+          - os: ubuntu-24.04-arm
             compiler: gcc-14
             generator: "Unix Makefiles"
             build_type: Debug
