--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,9 +151,12 @@ jobs:
         id: os-version
         uses: sersoft-gmbh/os-version-action@v3
 
-      - name: OS Version
-        run: echo "OS is ${{runner.os}} version ${{ steps.os-version.outputs.version }}"
-
+      - name: Clang Format
+        if: ${{ steps.os-version.outputs.version == 22.04 }}
+        run: |
+          echo "Setting CLANG_TIDY_VERSION to 14.0.0"
+          echo "CLANG_TIDY_VERSION=14.0.0" >> $GITHUB_ENV
+      
       - name: Check for llvm version mismatches
         if: ${{ contains(matrix.compiler, 'llvm') && !contains(matrix.compiler, env.CLANG_TIDY_VERSION) }}
         uses: actions/github-script@v7
@@ -187,7 +190,7 @@ jobs:
           ninja: true
           vcpkg: false
           ccache: true
-          clangtidy: "${{ matrix.os == 'ubuntu-22.04-arm' && '14.0.0' || env.CLANG_TIDY_VERSION }}"
+          clangtidy: "${{ steps.os-version.outputs.version == '22.04' && '14.0.0' || env.CLANG_TIDY_VERSION }}"
 
 
           cppcheck: true
@@ -205,7 +208,7 @@ jobs:
           cmake --build ./build --config ${{matrix.build_type}}
 
       - name: Unix - Test and coverage
-        if: (runner.os != 'Windows') && (matrix.os != 'ubuntu-22.04-arm')
+        if: (runner.os != 'Windows') && (steps.os-version.outputs.version != '22.04')
         working-directory: ./build
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
@@ -235,7 +238,7 @@ jobs:
 
       - name: Publish to codecov
         uses: codecov/codecov-action@v5
-        if: matrix.os != 'ubuntu-22.04-arm'
+        if: steps.os-version.outputs.version != '22.04'
         with:
           fail_ci_if_error: true # we weren't posting previously
           flags: ${{ runner.os }}
