Specifies TBZ2 package generator
Configures the CI workflow to use TBZ2 as the default package generator for specific jobs.
This change ensures consistent package creation across different operating systems and architectures.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
             build_type: Release
             packaging_maintainer_mode: On
             enable_ipo: On
+            package_generator: TBZ2
             gcov_executable: gcov-12
 
           - os: ubuntu-22.04-arm
@@ -120,6 +121,7 @@ jobs:
             build_type: Release
             packaging_maintainer_mode: On
             enable_ipo: Off
+            package_generator: TBZ2
             gcov_executable: "llvm-cov gcov"
 
           - os: ubuntu-22.04-arm
