--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: ci
 on:
+  workflow_dispatch:
   pull_request:
   release:
     types: [published]
@@ -31,7 +32,6 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - ubuntu-24.04-arm
           - macos-latest
           - windows-latest
         compiler:
@@ -77,18 +77,76 @@ jobs:
           - os: ubuntu-latest
             compiler: gcc-14
             generator: "Unix Makefiles"
-            build_type: Debug
-            gcov_executable: gcov-14
+            build_type: Release
             packaging_maintainer_mode: On
             enable_ipo: Off
 
-          - os: ubuntu-24.04-arm
-            compiler: gcc-14
+          # Ubuntu 22.04 arm builds for Raspberry Pi support
+          - os: ubuntu-22.04-arm
             generator: "Unix Makefiles"
+            compiler: gcc-12
+            build_type: Release
+            packaging_maintainer_mode: On
+            enable_ipo: On
+            package_generator: TBZ2
+            gcov_executable: gcov-12
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: gcc-12
+            build_type: Release
+            packaging_maintainer_mode: Off
+            enable_ipo: On
+            gcov_executable: gcov-12
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: gcc-12
             build_type: Debug
-            gcov_executable: gcov-14
+            packaging_maintainer_mode: On
+            enable_ipo: On
+            gcov_executable: gcov-12
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: gcc-12
+            build_type: Debug
+            packaging_maintainer_mode: Off
+            enable_ipo: On
+            gcov_executable: gcov-12
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: llvm-15.0.0
+            build_type: Release
             packaging_maintainer_mode: On
             enable_ipo: Off
+            package_generator: TBZ2
+            gcov_executable: "llvm-cov gcov"
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: llvm-15.0.0
+            build_type: Release
+            packaging_maintainer_mode: Off
+            enable_ipo: Off
+            gcov_executable: "llvm-cov gcov"
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: llvm-15.0.0
+            build_type: Debug
+            packaging_maintainer_mode: On
+            enable_ipo: Off
+            gcov_executable: "llvm-cov gcov"
+
+          - os: ubuntu-22.04-arm
+            generator: "Unix Makefiles"
+            compiler: llvm-15.0.0
+            build_type: Debug
+            packaging_maintainer_mode: Off
+            enable_ipo: Off
+            gcov_executable: "llvm-cov gcov"
 
           # Windows msvc builds
           - os: windows-latest
@@ -128,6 +186,16 @@ jobs:
 
 
     steps:
+      - name: Get OS version
+        id: os-version
+        uses: sersoft-gmbh/os-version-action@v3
+
+      - name: Clang Format
+        if: ${{ steps.os-version.outputs.version == 22.04 }}
+        run: |
+          echo "Setting CLANG_TIDY_VERSION to 15.0.0"
+          echo "CLANG_TIDY_VERSION=15.0.0" >> $GITHUB_ENV
+      
       - name: Check for llvm version mismatches
         if: ${{ contains(matrix.compiler, 'llvm') && !contains(matrix.compiler, env.CLANG_TIDY_VERSION) }}
         uses: actions/github-script@v7
@@ -161,13 +229,18 @@ jobs:
           ninja: true
           vcpkg: false
           ccache: true
-          clangtidy: ${{ env.CLANG_TIDY_VERSION }}
+          clangtidy: "${{env.CLANG_TIDY_VERSION }}"
 
 
           cppcheck: true
 
           gcovr: true
           opencppcoverage: true
+
+      # - name: Check clib
+      #   if: $steps.os-version.outputs.version == '22.04'
+      #   run: |
+
 
       - name: Configure CMake
         run: |
@@ -179,7 +252,7 @@ jobs:
           cmake --build ./build --config ${{matrix.build_type}}
 
       - name: Unix - Test and coverage
-        if: runner.os != 'Windows'
+        if: (runner.os != 'Windows') && (steps.os-version.outputs.version != '22.04')
         working-directory: ./build
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
@@ -209,6 +282,7 @@ jobs:
 
       - name: Publish to codecov
         uses: codecov/codecov-action@v5
+        if: steps.os-version.outputs.version != '22.04'
         with:
           fail_ci_if_error: true # we weren't posting previously
           flags: ${{ runner.os }}
