Adds clang-format to devcontainers
Adds clang-format to the devcontainers to provide consistent code formatting.

Also addresses a compiler-specific unreachable code handling in the ftxui sample, which ensures proper termination for compilers other than GCC or MSVC.

--- a/.devcontainer/Ubuntu-noble/Dockerfile
+++ b/.devcontainer/Ubuntu-noble/Dockerfile
@@ -58,6 +58,7 @@ RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - 2>/dev/
 
 # Set the default clang-tidy, so CMake can find it
 RUN update-alternatives --install /usr/bin/clang-tidy clang-tidy $(which clang-tidy-${LLVM_VER}) 1
+RUN apt install clang-format-${LLVM_VER} -y
 
 # Set clang-${LLVM_VER} as default clang
 RUN update-alternatives --install /usr/bin/clang clang $(which clang-${LLVM_VER}) 100
