--- a/.github/workflows/auto-clang-format.yml
+++ b/.github/workflows/auto-clang-format.yml
@@ -1,5 +1,5 @@
 name: auto-clang-format
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -7,6 +7,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        ref: ${{ github.event.pull_request.head.ref }}
     - uses: DoozyX/clang-format-lint-action@v0.20
       with:
         source: '.'
