--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,7 +27,8 @@ add_test(NAME cli.has_help COMMAND intro --help)
 # your program. Real world shows that this is the kind of simple mistake that is easy
 # to make, but also easy to test for.
 add_test(NAME cli.version_matches COMMAND intro --version)
-set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
+set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION
+                                                    "${PROJECT_VERSION}")
 
 add_executable(tests tests.cpp)
 target_link_libraries(
@@ -41,7 +42,8 @@ if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
     TARGET tests
     PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests> $<TARGET_FILE_DIR:tests>
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests>
+            $<TARGET_FILE_DIR:tests>
     COMMAND_EXPAND_LISTS)
 endif()
 
@@ -91,7 +93,8 @@ target_link_libraries(
           Clock::Clock_options
           Clock::sample_library
           Catch2::Catch2WithMain)
-target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
+target_compile_definitions(relaxed_constexpr_tests
+                           PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
 
 catch_discover_tests(
   relaxed_constexpr_tests
