--- a/fuzz_test/CMakeLists.txt
+++ b/fuzz_test/CMakeLists.txt
@@ -16,6 +16,8 @@ target_compile_options(fuzz_tester PRIVATE -fsanitize=fuzzer)
 # Allow short runs during automated testing to see if something new breaks
 set(FUZZ_RUNTIME
     10
-    CACHE STRING "Number of seconds to run fuzz tests during ctest run") # Default of 10 seconds
+    CACHE STRING "Number of seconds to run fuzz tests during ctest run"
+)# Default of 10 seconds
 
-add_test(NAME fuzz_tester_run COMMAND fuzz_tester -max_total_time=${FUZZ_RUNTIME})
+add_test(NAME fuzz_tester_run COMMAND fuzz_tester
+                                      -max_total_time=${FUZZ_RUNTIME})
