--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,8 @@ endif()
 include(${Catch2_SOURCE_DIR}/extras/Catch.cmake)
 
 # Provide a simple smoke test to make sure that the CLI works and can display a --help message
-add_test(NAME cli.has_help COMMAND intro --help)
+add_test(NAME cli.has_help COMMAND si3sim --help)
+set_tests_properties(cli.has_help PROPERTIES PASS_REGULAR_EXPRESSION "si3sim")
 
 # Provide a test to verify that the version being reported from the application
 # matches the version given to CMake. This will be important once you package
@@ -31,12 +32,8 @@ set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION
                                                     "${PROJECT_VERSION}")
 
 add_executable(tests tests.cpp)
-target_link_libraries(
-  tests
-  PRIVATE Clock::Clock_warnings
-          Clock::Clock_options
-          Clock::sample_library
-          Catch2::Catch2WithMain)
+target_link_libraries(tests PRIVATE Clock::Clock_warnings Clock::Clock_options
+                                    Catch2::Catch2WithMain)
 
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
@@ -59,52 +56,5 @@ catch_discover_tests(
   .
   OUTPUT_PREFIX
   "unittests."
-  OUTPUT_SUFFIX
-  .xml)
-
-# Add a file containing a set of constexpr tests
-add_executable(constexpr_tests constexpr_tests.cpp)
-target_link_libraries(
-  constexpr_tests
-  PRIVATE Clock::Clock_warnings
-          Clock::Clock_options
-          Clock::sample_library
-          Catch2::Catch2WithMain)
-
-catch_discover_tests(
-  constexpr_tests
-  TEST_PREFIX
-  "constexpr."
-  REPORTER
-  XML
-  OUTPUT_DIR
-  .
-  OUTPUT_PREFIX
-  "constexpr."
-  OUTPUT_SUFFIX
-  .xml)
-
-# Disable the constexpr portion of the test, and build again this allows us to have an executable that we can debug when
-# things go wrong with the constexpr testing
-add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
-target_link_libraries(
-  relaxed_constexpr_tests
-  PRIVATE Clock::Clock_warnings
-          Clock::Clock_options
-          Clock::sample_library
-          Catch2::Catch2WithMain)
-target_compile_definitions(relaxed_constexpr_tests
-                           PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
-
-catch_discover_tests(
-  relaxed_constexpr_tests
-  TEST_PREFIX
-  "relaxed_constexpr."
-  REPORTER
-  XML
-  OUTPUT_DIR
-  .
-  OUTPUT_PREFIX
-  "relaxed_constexpr."
   OUTPUT_SUFFIX
   .xml)
