--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,42 +19,7 @@ endif()
 
 include(${Catch2_SOURCE_DIR}/extras/Catch.cmake)
 
-# Provide a simple smoke test to make sure that the CLI works and can display a --help message
-add_test(NAME cli.has_help COMMAND si3sim --help)
-set_tests_properties(cli.has_help PROPERTIES PASS_REGULAR_EXPRESSION "si3sim")
+# ---- Subdirectories ----
 
-# Provide a test to verify that the version being reported from the application
-# matches the version given to CMake. This will be important once you package
-# your program. Real world shows that this is the kind of simple mistake that is easy
-# to make, but also easy to test for.
-add_test(NAME cli.version_matches COMMAND intro --version)
-set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION
-                                                    "${PROJECT_VERSION}")
-
-add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE Clock::Clock_warnings Clock::Clock_options
-                                    Catch2::Catch2WithMain)
-
-if(WIN32 AND BUILD_SHARED_LIBS)
-  add_custom_command(
-    TARGET tests
-    PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests>
-            $<TARGET_FILE_DIR:tests>
-    COMMAND_EXPAND_LISTS)
-endif()
-
-# automatically discover tests that are defined in catch based test files you can modify the unittests. Set TEST_PREFIX
-# to whatever you want, or use different for different binaries
-catch_discover_tests(
-  tests
-  TEST_PREFIX
-  "unittests."
-  REPORTER
-  XML
-  OUTPUT_DIR
-  .
-  OUTPUT_PREFIX
-  "unittests."
-  OUTPUT_SUFFIX
-  .xml)
+add_subdirectory(misc_lib)
+add_subdirectory(si3_sim)
