Add Si3 simulation configuration and implementation
- Introduced `config.hpp` and `config.cpp` to manage Si3 simulation configurations, including measurement events and run schedules.
- Implemented `Si3Sim` class in `si3_sim.hpp` and `si3_sim.cpp` to encapsulate simulation logic and data generation.
- Added JSON serialization and deserialization for configuration management using Boost.JSON.
- Created `date_time.cpp` for handling date and time parsing, including ISO format support.
- Updated `time.cpp` to remove ISO parsing logic, delegating it to `date_time.cpp`.
- Enhanced CMake build files to include new source files and link necessary libraries.
- Added unit tests for date and time functionalities, ensuring robust parsing and formatting.
- Implemented command-line interface (CLI) error handling for missing or invalid arguments in `main.cpp`.

--- a/configured_files/CMakeLists.txt
+++ b/configured_files/CMakeLists.txt
@@ -1,6 +1,36 @@
 # A very simple example of a configured file that might need to be
 # converted to one that is publicly installed in the case that
 # you are developing a library
+
+# Get Git commit hash
+execute_process(
+  COMMAND git rev-parse --short HEAD
+  OUTPUT_VARIABLE GIT_COMMIT
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Get Git branch name
+execute_process(
+  COMMAND git rev-parse --abbrev-ref HEAD
+  OUTPUT_VARIABLE GIT_BRANCH
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Get Git status
+execute_process(
+  COMMAND git diff --quiet --exit-code
+  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+  RESULT_VARIABLE GIT_DIFF_RESULT)
+
+if(NOT
+   GIT_DIFF_RESULT
+   EQUAL
+   0)
+  message(STATUS "Repository has uncommitted changes.")
+  set(GIT_CLEAN false)
+else()
+  message(STATUS "Repository is clean (no uncommitted changes).")
+  set(GIT_CLEAN true)
+endif()
+
 configure_file(
   "config.hpp.in"
   "${CMAKE_BINARY_DIR}/configured_files/include/internal_use_only/config.hpp"
