--- a/test/misc_lib/CMakeLists.txt
+++ b/test/misc_lib/CMakeLists.txt
@@ -1,8 +1,8 @@
 # ---- CMakeLists.txt for the misc_lib test suite ----
 
-add_executable(time_tests time_tests.cpp)
+add_executable(date_time_tests date_time_tests.cpp)
 target_link_libraries(
-  time_tests
+  date_time_tests
   PRIVATE Clock::Clock_warnings
           Clock::Clock_options
           Clock::misc_lib
@@ -10,7 +10,7 @@ target_link_libraries(
 
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
-    TARGET time_tests
+    TARGET date_time_tests
     PRE_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:time_tests>
             $<TARGET_FILE_DIR:time_tests>
@@ -20,7 +20,7 @@ endif()
 # automatically discover tests that are defined in catch based test files you can modify the unittests. Set TEST_PREFIX
 # to whatever you want, or use different for different binaries
 catch_discover_tests(
-  time_tests
+  date_time_tests
   TEST_PREFIX
   "unittests."
   REPORTER
