--- a/src/si3_sim/CMakeLists.txt
+++ b/src/si3_sim/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_executable(si3sim main.cpp)
 
+target_sources(si3sim PRIVATE config.cpp)
+
 target_link_libraries(si3sim PRIVATE Clock::Clock_options Clock::Clock_warnings)
 
 target_link_system_libraries(
