Fix clang-tidy checks, reorder includes in time.hpp, and correct target name in CMakeLists.txt for date_time_tests

--- a/test/misc_lib/CMakeLists.txt
+++ b/test/misc_lib/CMakeLists.txt
@@ -12,8 +12,8 @@ if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
     TARGET date_time_tests
     PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:time_tests>
-            $<TARGET_FILE_DIR:time_tests>
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:date_time_tests>
+            $<TARGET_FILE_DIR:date_time_tests>
     COMMAND_EXPAND_LISTS)
 endif()
 
