Improves error handling and adds atomic library
Adds an exception for an unknown RunSchedule.

Corrects a logic error in the configuration writing function, ensuring that the function returns even if an error occurs.

Adds support for linking the atomic library to resolve potential linking issues on certain platforms.

--- a/test/misc_lib/CMakeLists.txt
+++ b/test/misc_lib/CMakeLists.txt
@@ -8,6 +8,11 @@ target_link_libraries(
           Clock::misc_lib
           Catch2::Catch2WithMain)
 
+find_library(ATOMIC_LIB atomic)
+if(ATOMIC_LIB)
+  target_link_libraries(date_time_tests PRIVATE ${ATOMIC_LIB})
+endif()
+
 if(WIN32 AND BUILD_SHARED_LIBS)
   add_custom_command(
     TARGET date_time_tests
