Refactor CMakeLists.txt to comment out Clock library dependencies in target_link_libraries

--- a/test/misc_lib/CMakeLists.txt
+++ b/test/misc_lib/CMakeLists.txt
@@ -5,7 +5,8 @@ add_executable(date_time_tests date_time_tests.cpp)
 
 target_link_libraries(
   date_time_tests
-  PRIVATE Clock::Clock_warnings Clock::Clock_options
+  PRIVATE # Clock::Clock_warnings
+          # Clock::Clock_options
           # Clock::misc_lib
           Catch2::Catch2WithMain)
 
